# gff-stats

./: .gitignore  Calculate_GC3_per_window.py  Cargo.toml  README.md  calculate_GC3_per_window.py  make_docs.bash
docs/: crates.js  help.html  index.html  search-index.js  settings.html  source-files.js
docs/gff_stats/: all.html  index.html  sidebar-items.js
docs/gff_stats/seq/: fn.generate_seqs.html  fn.run_cds.html  fn.run_spliced.html  index.html  sidebar-items.js
docs/gff_stats/stat/: constant.HEADERS.html  fn.calculate_stats.html  fn.calculate_stats_spliced.html  fn.calculate_stats_unspliced.html  index.html  sidebar-items.js  struct.Output.html  struct.SplicedCDS.html  struct.Writer.html
docs/gff_stats/utils/: constant.FOURFOLD_DEG.html  constant.SIXFOLD_DEG.html  enum.Degeneracy.html  fn.four_fold_site_stats.html  fn.gc_3.html  fn.gc_four_fold_deg_sites.html  fn.reverse_complement.html  fn.switch_base.html  fn.translate.html  fn.trim_sequence.html  fn.whole_seq_stats.html  index.html  sidebar-items.js  static.AA_TABLE_CANONICAL.html  static.ASCII_TO_INDEX.html  struct.FourFoldStats.html  struct.GC3Stats.html  struct.Stats.html
docs/implementors/clap/derive/: trait.ValueEnum.js
docs/implementors/core/clone/: trait.Clone.js
docs/implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
docs/implementors/core/default/: trait.Default.js
docs/implementors/core/fmt/: trait.Debug.js  (+1 more)
docs/src/gff_stats/: lib.rs.html  seq.rs.html  stat.rs.html  utils.rs.html
src/: lib.rs  main.rs  rename.rs  seq.rs  stat.rs  utils.rs
(+10 files in other folders)
