[package]
name = "gff-stats"
version = "0.2.2"
authors = ["Max Brown <mb39@sanger.ac.uk>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bio = "1.1.0"
bio-types = "0.13.0"
clap = {version = "4.1.1", features = ["cargo"]}
rayon = "1.6.1"
anyhow = "1.0.68"